[gd_scene load_steps=2 format=3 uid="uid://ba0p7mm7pibwv"]

[ext_resource type="Script" uid="uid://j87casppx7a4" path="res://Scripts/Skills/Area/area.gd" id="1_gagyp"]

[node name="Area" type="Area3D"]
script = ExtResource("1_gagyp")

[node name="TickTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
